--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+build
+target
+bin
+.gradle
+.vscode
+.bsp
+.DS_STORE
